--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 /* Basic */
 *{box-sizing:border-box}
 body{margin:0;font-family:Montserrat,system-ui,sans-serif;background:var(--bg-main);color:var(--text);min-height:100vh;display:flex;flex-direction:column;}
-
-/* Brand Wave */
 .brandWave{position:fixed;inset:0;z-index:-1;background:radial-gradient(circle at 20% 30%,rgba(255,184,108,.08),transparent 40%),radial-gradient(circle at 80% 70%,rgba(255,184,108,.06),transparent 40%);animation:calmWave 12s ease-in-out infinite;}
 @keyframes calmWave{0%{transform:translateY(0)}50%{transform:translateY(-8px)}100%{transform:translateY(0)}}
 
@@ -27,6 +25,7 @@ body{margin:0;font-family:Montserrat,system-ui,sans-serif;background:var(--bg-ma
 .loginCard{background:var(--bg-card);padding:2rem;border-radius:18px;width:100%;max-width:360px;text-align:center;}
 .loginCard h1{font-family:'Playfair Display',serif;margin-top:0;color:var(--accent);}
 .loginCard input{width:100%;padding:.7rem;border-radius:12px;border:none;background:#1f232d;color:var(--text);margin-bottom:1rem;}
+.loginCard select{width:100%;padding:.6rem;border-radius:12px;background:#1f232d;color:var(--text);border:none;margin-bottom:1rem;}
 .loginCard button{width:100%;padding:.7rem;border-radius:999px;border:none;background:var(--accent);cursor:pointer;}
 
 /* ---------- APP ---------- */
@@ -37,10 +36,6 @@ body{margin:0;font-family:Montserrat,system-ui,sans-serif;background:var(--bg-ma
 
 /* ---------- PROFILE / INFO ---------- */
 .profile p{margin:.2rem 0;font-size:.9rem;font-weight:500;}
-
-/* ---------- SELECTORS ---------- */
-select{width:100%;padding:.5rem;border-radius:10px;background:#1f232d;color:var(--text);border:none;margin-bottom:.6rem;}
-.sectionTitle{color:var(--accent);margin-top:1rem;font-weight:600;}
 
 /* ---------- CHAT MESSAGES ---------- */
 .message{max-width:75%;padding:.8rem 1.1rem;border-radius:18px;margin-bottom:.6rem;line-height:1.4;animation:fadeIn .4s forwards;}
@@ -69,6 +64,7 @@ footer button{padding:.6rem 1rem;border-radius:999px;border:none;background:var(
 /* ---------- STARTER & CHAT BOX ---------- */
 #starterSelect{margin-top:.3rem;}
 #chatInputContainer{display:flex;gap:.5rem;margin-top:1rem;}
+#companionCard{transition:all 0.3s ease;}
 </style>
 </head>
 <body>
@@ -102,11 +98,16 @@ footer button{padding:.6rem 1rem;border-radius:999px;border:none;background:var(
     <div class="sectionTitle">Settings <button style="float:right" onclick="openSettings()">⚙️</button></div>
 
     <div class="sectionTitle">Conversation Starter</div>
+    <select id="starterCategorySelect" onchange="populateStarterCategory(this.value)">
+      <option value="">— select category —</option>
+      <option value="Workplace">Workplace</option>
+      <option value="School">School</option>
+      <option value="Social">Social</option>
+      <option value="Travel">Travel</option>
+      <option value="Advanced">Advanced</option>
+    </select>
     <select id="starterSelect">
       <option value="">— select one —</option>
-      <option>How’s your day feeling so far?</option>
-      <option>Want to talk or just think out loud?</option>
-      <option>What’s been sitting on your mind?</option>
     </select>
   </div>
 
@@ -126,11 +127,10 @@ footer button{padding:.6rem 1rem;border-radius:999px;border:none;background:var(
   </div>
 </div>
 
-<!-- SETTINGS OVERLAY -->
+<!-- SETTINGS -->
 <div id="settingsOverlay">
   <div class="settingsCard">
     <h3>Talk 2Me Nice Settings</h3>
-
     <label>
       Companion
       <select id="settingsCompanion">
@@ -140,7 +140,6 @@ footer button{padding:.6rem 1rem;border-radius:999px;border:none;background:var(
         <option value="School">School Mode</option>
       </select>
     </label>
-
     <label>
       Language
       <select id="settingsLanguage">
@@ -150,7 +149,6 @@ footer button{padding:.6rem 1rem;border-radius:999px;border:none;background:var(
         <option value="pt">Português</option>
       </select>
     </label>
-
     <label>
       Voice Speed
       <select id="voiceSpeed">
@@ -159,14 +157,12 @@ footer button{padding:.6rem 1rem;border-radius:999px;border:none;background:var(
         <option value="1.1">Fast</option>
       </select>
     </label>
-
     <label>
       <input type="checkbox" id="voiceOutputToggle" checked> Voice Replies
     </label>
     <label>
       <input type="checkbox" id="voiceInputToggle" checked> Voice Input
     </label>
-
     <div class="links">
       <a href="#" onclick="closeSettings();return false;">Close</a>
       <a href="#" onclick="alert('Privacy Policy Placeholder');return false;">Privacy</a>
@@ -177,14 +173,30 @@ footer button{padding:.6rem 1rem;border-radius:999px;border:none;background:var(
 
 <script>
 // ---------- STATE ----------
-const state={
-  user:{name:""},
-  companion:"Whisp",
-  language:"en",
-  emotionalLoad:"neutral",
-  voice:{input:true,output:true,speed:1},
-  starterUsed:false
+const state={user:{name:""},companion:"Whisp",language:"en",emotionalLoad:"neutral",voice:{input:true,output:true,speed:1},starterUsed:false};
+
+// ---------- STARTERS ----------
+const starterCategories={
+  "Workplace":["Morning check-in","Project update","Wrap up evening"],
+  "School":["How was class?","Homework help","Favorite subject?"],
+  "Social":["Grab coffee?","Walk this afternoon?","How was your day?"],
+  "Travel":["Nearest station?","Travel plans?","Favorite place visited?"],
+  "Advanced":["Did you see the game?","Thoughts on recent news?","Any plans this weekend?"]
 };
+
+// ---------- ELEMENTS ----------
+const loginOverlay=document.getElementById("loginOverlay");
+const nicknameInput=document.getElementById("nicknameInput");
+const companionSelect=document.getElementById("companionSelect");
+const app=document.getElementById("app");
+const nameLabel=document.getElementById("nameLabel");
+const companionLabel=document.getElementById("companionLabel");
+const companionName=document.getElementById("companionName");
+const chat=document.getElementById("chat");
+const input=document.getElementById("input");
+const mic=document.getElementById("mic");
+const starterSelect=document.getElementById("starterSelect");
+const starterCategorySelect=document.getElementById("starterCategorySelect");
 
 // ---------- LOGIN ----------
 function enterApp(){
@@ -192,50 +204,54 @@ function enterApp(){
   if(!name)return alert("Enter a nickname");
   state.user.name=name;
   state.companion=companionSelect.value;
-  state.language=localStorage.getItem("language")||"en";
-
   loginOverlay.style.display="none";
   app.style.display="flex";
-
   nameLabel.textContent=name;
   companionLabel.textContent=state.companion;
   companionName.textContent=state.companion;
-
-  settingsCompanion.value=state.companion;
-  settingsLanguage.value=state.language;
-
   greet();
 }
 
 // ---------- SETTINGS ----------
-function openSettings(){settingsOverlay.style.display="flex";}
-function closeSettings(){settingsOverlay.style.display="none";}
-settingsCompanion.onchange=()=>{state.companion=settingsCompanion.value;companionLabel.textContent=state.companion;companionName.textContent=state.companion;}
-settingsLanguage.onchange=()=>{state.language=settingsLanguage.value;localStorage.setItem("language",state.language);}
-voiceSpeed.onchange=()=>{state.voice.speed=parseFloat(voiceSpeed.value);}
-voiceOutputToggle.onchange=()=>{state.voice.output=voiceOutputToggle.checked;}
-voiceInputToggle.onchange=()=>{state.voice.input=voiceInputToggle.checked;}
+function openSettings(){document.getElementById("settingsOverlay").style.display="flex";}
+function closeSettings(){document.getElementById("settingsOverlay").style.display="none";}
+document.getElementById("settingsCompanion").onchange=()=>{state.companion=document.getElementById("settingsCompanion").value;companionLabel.textContent=state.companion;companionName.textContent=state.companion;}
+document.getElementById("settingsLanguage").onchange=()=>{state.language=document.getElementById("settingsLanguage").value;}
+document.getElementById("voiceSpeed").onchange=()=>{state.voice.speed=parseFloat(document.getElementById("voiceSpeed").value);}
+document.getElementById("voiceOutputToggle").onchange=()=>{state.voice.output=document.getElementById("voiceOutputToggle").checked;}
+document.getElementById("voiceInputToggle").onchange=()=>{state.voice.input=document.getElementById("voiceInputToggle").checked;}
 
-// ---------- EI & MULTILINGUAL ----------
+// ---------- STARTERS ----------
+function populateStarterCategory(category){
+  starterSelect.innerHTML="<option value=''>— select one —</option>";
+  if(!category)return;
+  starterCategories[category].forEach(opt=>{
+    const el=document.createElement("option"); el.value=opt; el.textContent=opt;
+    starterSelect.appendChild(el);
+  });
+  state.starterUsed=false;
+}
+starterSelect.onchange=()=>{if(!state.starterUsed && starterSelect.value){state.starterUsed=true;send(starterSelect.value);}};
+
+// ---------- EI ----------
 function assess(text){
-  const patterns = {
-    en:{high:/!{2,}|panic|overwhelmed|angry|stressed/i,low:/ok|fine|sure/i},
-    es:{high:/!{2,}|ansioso|abrumado|enojado|estresado/i,low:/bien|ok|vale/i},
-    fr:{high:/!{2,}|anxieux|débordé|énervé|stressé/i,low:/ça va|bien|ok/i},
-    pt:{high:/!{2,}|ansioso|sobrecarregado|irritado|estressado/i,low:/bem|ok|tá/i}
-  };
+  const patterns={en:{high:/!{2,}|panic|overwhelmed|angry|stressed/i,low:/ok|fine|sure/i},
+                  es:{high:/!{2,}|ansioso|abrumado|enojado|estresado/i,low:/bien|ok|vale/i},
+                  fr:{high:/!{2,}|anxieux|débordé|énervé|stressé/i,low:/ça va|bien|ok/i},
+                  pt:{high:/!{2,}|ansioso|sobrecarregado|irritado|estressado/i,low:/bem|ok|tá/i}};
   const lang=patterns[state.language]||patterns.en;
   if(lang.high.test(text))return"high";
   if(lang.low.test(text))return"low";
   return"neutral";
 }
 
+// ---------- REPLY ----------
 function generateReply(){
   const replies={
-    en:{high:"Let’s slow this down together. You’re not alone here.",neutral:"I hear you. Want to keep going?",low:"I’m here whenever you want to talk."},
-    es:{high:"Vamos a bajar el ritmo juntos. No estás solo aquí.",neutral:"Te escucho. ¿Quieres seguir?",low:"Aquí estoy cuando quieras hablar."},
-    fr:{high:"On peut ralentir ensemble. Tu n’es pas seul ici.",neutral:"Je t’écoute. Tu veux continuer ?",low:"Je suis là quand tu veux."},
-    pt:{high:"Vamos desacelerar juntos. Você não está sozinho.",neutral:"Estou te ouvindo. Quer continuar?",low:"Estou aqui quando quiser falar."}
+    en:{high:"Let's slow down. I'm here with you.",neutral:"I hear you. Want to keep going?",low:"I'm here whenever you want to talk."},
+    es:{high:"Vamos a bajar el ritmo. Estoy contigo.",neutral:"Te escucho. ¿Quieres seguir?",low:"Estoy aquí cuando quieras hablar."},
+    fr:{high:"Ralentissons. Je suis là avec toi.",neutral:"Je t'écoute. Tu veux continuer ?",low:"Je suis là quand tu veux."},
+    pt:{high:"Vamos desacelerar. Estou com você.",neutral:"Estou te ouvindo. Quer continuar?",low:"Estou aqui quando quiser falar."}
   };
   if(state.companion==="School")state.emotionalLoad="neutral";
   const langReplies=replies[state.language]||replies.en;
@@ -243,55 +259,34 @@ function generateReply(){
 }
 
 // ---------- CHAT ----------
-const chat=document.getElementById("chat");
-function add(text,who){
-  const div=document.createElement("div");
-  div.className=`message ${who}`;
-  div.textContent=text;
-  chat.appendChild(div);
-  chat.scrollTop=chat.scrollHeight;
+let convoCount=parseInt(localStorage.getItem("convoCount"))||0;
+function add(text,who){const div=document.createElement("div");div.className=`message ${who}`;div.textContent=text;chat.appendChild(div);chat.scrollTop=chat.scrollHeight;}
+function animateCompanion(){
+  const card=document.getElementById("companionCard");
+  card.style.transition="all 0.4s ease";
+  switch(state.emotionalLoad){
+    case "high": card.style.boxShadow="0 0 20px 4px red"; card.style.transform="scale(1.05)"; break;
+    case "low": card.style.boxShadow="0 0 12px 2px green"; card.style.transform="scale(0.98)"; break;
+    default: card.style.boxShadow="0 0 14px 2px var(--accent)"; card.style.transform="scale(1)";
+  }
 }
-
 function send(msg){
-  const text=msg||input.value.trim();
-  if(!text)return;
-  add(text,"user");
-  input.value="";
-  state.emotionalLoad=assess(text);
+  const text=msg||input.value.trim(); if(!text)return; add(text,"user"); input.value=""; state.emotionalLoad=assess(text); animateCompanion();
+  convoCount++; localStorage.setItem("convoCount",convoCount);
   setTimeout(()=>{
-    const reply=generateReply();
-    add(reply,"bot");
-    speak(reply);
+    const reply=generateReply(); add(reply,"bot"); speak(reply);
+    if(Math.random()<0.3 && !state.starterUsed){
+      const catKeys=Object.keys(starterCategories);
+      const category=catKeys[Math.floor(Math.random()*catKeys.length)];
+      const followUp=starterCategories[category][Math.floor(Math.random()*starterCategories[category].length)];
+      add("💡 "+followUp,"bot"); speak(followUp); state.starterUsed=true;
+    }
   },400);
 }
 
-// ---------- STARTERS ----------
-starterSelect.onchange=()=>{
-  if(state.starterUsed||!starterSelect.value)return;
-  state.starterUsed=true;
-  send(starterSelect.value);
-};
-
-// ---------- VOICE ----------
-function speak(text){
-  if(!state.voice.output || state.emotionalLoad==="high")return;
-  const utter=new SpeechSynthesisUtterance(text);
-  const voices={en:"en-US",es:"es-ES",fr:"fr-FR",pt:"pt-BR"};
-  utter.lang=voices[state.language]||"en-US";
-  utter.rate=state.voice.speed;
-  speechSynthesis.speak(utter);
-}
-function voiceIn(){
-  if(!state.voice.input)return;
-  const R=window.SpeechRecognition||window.webkitSpeechRecognition;
-  if(!R)return alert("Voice not supported");
-  const r=new R();
-  r.lang=state.language;
-  r.onresult=e=>send(e.results[0][0].transcript);
-  mic.classList.add("listening");
-  r.onend=()=>mic.classList.remove("listening");
-  r.start();
-}
+// ---------- SPEECH ----------
+function speak(text){if(!state.voice.output)return; const utter=new SpeechSynthesisUtterance(text); const voices={en:"en-US",es:"es-ES",fr:"fr-FR",pt:"pt-BR"}; utter.lang=voices[state.language]||"en-US"; utter.rate=state.voice.speed; speechSynthesis.speak(utter);}
+function voiceIn(){if(!state.voice.input)return; const R=window.SpeechRecognition||window.webkitSpeechRecognition; if(!R)return alert("Voice not supported"); const r=new R(); r.lang=state.language; r.onresult=e=>send(e.results[0][0].transcript); mic.classList.add("listening"); r.onend=()=>mic.classList.remove("listening"); r.start();}
 
 // ---------- GREETING ----------
 function greet(){add("Welcome to Talk 2Me Nice. Your companion is ready to chat.","bot");}
