--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
   --accent: #ffb86c;
   --text-main: #e1e4ea;
   --text-muted: #a1a6b0;
+  --starColor: #ffd700;
+  --whispColor: #a8e6cf;
 }
-
-/* Global */
 body{margin:0;font-family:'Montserrat',sans-serif;background:var(--bg-main);color:var(--text-main);display:flex;flex-direction:column;min-height:100vh;}
 h1,h3,h4{font-family:'Playfair Display',serif;margin:0;}
 button,input,select{font-family:'Montserrat',sans-serif;}
 .hidden{display:none;}
-header{text-align:center;font-size:2rem;color:var(--accent);text-shadow:0 4px 10px rgba(0,0,0,0.35);animation:floatLogo 3s ease-in-out infinite alternate;margin:1rem 0;}
+header{text-align:center;font-size:2.5rem;color:var(--accent);text-shadow:0 4px 10px rgba(0,0,0,0.35);animation:floatLogo 3s ease-in-out infinite alternate;margin:1rem 0;}
 @keyframes floatLogo{0%{transform:translateY(0px);}100%{transform:translateY(-6px);}}
 
-/* Landing Page */
 #landingPage{max-width:900px;margin:0 auto;display:flex;flex-direction:column;align-items:center;gap:1rem;}
 #nicknameInput{padding:0.6rem;border-radius:12px;border:none;background:#1f232d;color:var(--text-main);width:100%;max-width:300px;}
 #startBtn{padding:0.6rem 1rem;border-radius:999px;border:none;background:var(--accent);color:#1b1f27;cursor:pointer;transition:all 0.3s;width:100%;max-width:300px;}
@@ -31,31 +30,32 @@ header{text-align:center;font-size:2rem;color:var(--accent);text-shadow:0 4px 10
 
 /* Whisp cloud */
 #whispContainer svg{width:200px;height:100px;cursor:pointer;}
-.whispBody{filter:blur(3px);transition:fill 0.3s;}
+.whispBody{fill:var(--whispColor);filter:blur(3px);transition:fill 0.3s;}
 .whispEye{transition:transform 0.3s;}
 
 /* Star companion */
-#star{font-size:5rem;text-shadow:0 3px 6px rgba(0,0,0,0.4),0 0 20px var(--starColor);color:var(--starColor);transition:color 0.3s,text-shadow 0.3s;cursor:pointer;animation:twinkle 2s infinite alternate;}
+#star{font-size:5rem;color:var(--starColor);text-shadow:0 3px 6px rgba(0,0,0,0.4),0 0 20px var(--starColor);transition:color 0.3s,text-shadow 0.3s;cursor:pointer;animation:twinkle 2s infinite alternate;}
 @keyframes twinkle{0%{transform:scale(1) rotate(0deg);}50%{transform:scale(1.1) rotate(5deg);}100%{transform:scale(1) rotate(0deg);}}
 
 /* Chat Container */
 #chatContainer{flex-direction:row;display:flex;gap:1rem;max-width:900px;margin:2rem auto;animation:fadeIn 0.8s ease-out;}
 #profileSidebar{width:220px;padding:1rem;background:var(--bg-card);border-radius:16px;flex-shrink:0;display:flex;flex-direction:column;gap:1rem;box-shadow:0 6px 16px rgba(0,0,0,0.3);}
-#chatArea{flex:1;display:flex;flex-direction:column;background:var(--bg-card);border-radius:16px;padding:1rem;box-shadow:0 6px 16px rgba(0,0,0,0.25);}
+#chatArea{flex:1;display:flex;flex-direction:column;background:var(--bg-card);border-radius:16px;padding:1rem;box-shadow:0 6px 16px rgba(0,0,0,0.25);min-height:400px;}
 .message{max-width:75%;padding:0.8rem 1.2rem;margin-bottom:0.7rem;border-radius:20px;line-height:1.5;opacity:0;animation:fadeInMessage 0.5s forwards;}
 .user{background:var(--accent);color:#1b1f27;align-self:flex-end;}
 .bot{background:var(--bg-card);align-self:flex-start;}
+
 footer{display:flex;flex-wrap:wrap;align-items:center;padding:0.8rem;gap:0.5rem;position:sticky;bottom:0;background:var(--bg-card);}
 footer input{flex:1;padding:0.6rem;border-radius:12px;border:none;background:#1f232d;color:var(--text-main);}
 footer button{padding:0.6rem 1rem;border-radius:999px;border:none;background:var(--accent);cursor:pointer;transition:all 0.3s;}
 footer button:hover{transform:scale(1.05);background:#ff9f40;}
+footer a{color:var(--accent);text-decoration:none;margin-left:0.5rem;}
 
 /* Settings Panel */
-#settingsPanel{position:absolute;top:50px;right:20px;background:var(--bg-card);padding:1rem;border-radius:14px;width:250px;box-shadow:0 4px 12px rgba(0,0,0,0.5);display:none;}
+#settingsBtn{border:none;background:var(--accent);border-radius:50%;width:42px;height:42px;cursor:pointer;font-size:1.2rem;}
+#settingsPanel{position:absolute;top:60px;right:20px;background:var(--bg-card);padding:1rem;border-radius:14px;width:250px;box-shadow:0 4px 12px rgba(0,0,0,0.5);display:none;z-index:100;}
 #settingsPanel h4{margin-top:0;color:var(--accent);}
 #settingsPanel label{display:flex;align-items:center;justify-content:space-between;margin-bottom:0.6rem;gap:0.5rem;}
-
-/* Dropdown */
 select{padding:0.5rem;border-radius:12px;border:none;background:#1f232d;color:var(--text-main);width:100%;}
 
 /* Animations */
@@ -73,15 +73,15 @@ select{padding:0.5rem;border-radius:12px;border:none;background:#1f232d;color:va
   <div id="companionContainer">
     <div id="whispContainer">
       <svg viewBox="0 0 200 100">
-        <ellipse cx="50" cy="50" rx="50" ry="30" fill="#a8e6cf" class="whispBody"/>
-        <ellipse cx="90" cy="40" rx="40" ry="25" fill="#a8e6cf" class="whispBody"/>
+        <ellipse cx="50" cy="50" rx="50" ry="30" class="whispBody"/>
+        <ellipse cx="90" cy="40" rx="40" ry="25" class="whispBody"/>
         <circle cx="40" cy="45" r="5" fill="#fff" class="whispEye"/>
         <circle cx="70" cy="50" r="5" fill="#fff" class="whispEye"/>
       </svg>
       <input type="color" id="whispColorPicker" value="#a8e6cf" title="Choose Whisp color"/>
     </div>
     <div id="starContainer">
-      <div id="star" style="--starColor:#ffd700;">⭐</div>
+      <div id="star">⭐</div>
       <input type="color" id="starColorPicker" value="#ffd700" title="Choose Star color"/>
     </div>
   </div>
@@ -96,7 +96,7 @@ select{padding:0.5rem;border-radius:12px;border:none;background:#1f232d;color:va
       <p>🌍 <span id="profileLanguage"></span></p>
       <p>🧚 <span id="profileCompanion"></span></p>
     </div>
-    <button id="settingsBtn">⚙️ Options</button>
+    <button id="settingsBtn">⚙️</button>
     <div id="settingsPanel">
       <h4>Conversation Starter</h4>
       <select id="starterDropdown" onchange="startStarter()">
@@ -112,6 +112,13 @@ select{padding:0.5rem;border-radius:12px;border:none;background:#1f232d;color:va
           <option value="1.1">Fast</option>
         </select>
       </label>
+      <h4>Mode</h4>
+      <select id="modeSelector">
+        <option value="friendly">Friendly</option>
+        <option value="playful">Playful</option>
+        <option value="serious">Serious</option>
+        <option value="school">School Mode</option>
+      </select>
     </div>
   </div>
   <div id="chatArea">
@@ -129,12 +136,8 @@ select{padding:0.5rem;border-radius:12px;border:none;background:#1f232d;color:va
 
 <script>
 // Companion color pickers
-document.getElementById("whispColorPicker").oninput=(e)=>{
-  document.querySelectorAll(".whispBody").forEach(el=>el.setAttribute("fill",e.target.value));
-};
-document.getElementById("starColorPicker").oninput=(e)=>{
-  document.getElementById("star").style.setProperty('--starColor',e.target.value);
-};
+document.getElementById("whispColorPicker").oninput=(e)=>{document.querySelectorAll(".whispBody").forEach(el=>el.setAttribute("fill",e.target.value));};
+document.getElementById("starColorPicker").oninput=(e)=>{document.getElementById("star").style.color=e.target.value;document.getElementById("star").style.textShadow=`0 3px 6px rgba(0,0,0,0.4),0 0 20px ${e.target.value}`;};
 
 // Landing page start
 document.getElementById("startBtn").onclick=()=>{
@@ -156,7 +159,7 @@ document.getElementById("settingsBtn").onclick=()=>{
   panel.style.display=(panel.style.display==="none"||panel.style.display==="")?"block":"none";
 };
 
-// Conversation starters (daily)
+// Daily conversation starters
 const conversationStarters={
   "Workplace":["Good morning! How's your day starting?","Hi! Did you catch the latest project update?","Evening! Ready to wrap things up?"],
   "Dating":["Hi there! Would you like to grab coffee?","Hey! Want to take a walk this afternoon?","Hello! How was your day today?"],
@@ -186,7 +189,7 @@ function populateStarters(){
 }
 function startStarter(){ const val=document.getElementById("starterDropdown").value; if(val) sendMessage(val); }
 
-// Chat logic
+// Chat
 const chat=document.getElementById("chat");
 function addMessage(text,sender){
   const div=document.createElement("div");
@@ -195,15 +198,43 @@ function addMessage(text,sender){
   chat.appendChild(div);
   chat.scrollTop=chat.scrollHeight;
 }
+
+// Voice
+const micBtn=document.getElementById("micBtn");
+let speechMode=true;
+micBtn.onclick=startSpeechToSpeech;
+function startSpeechToSpeech(){
+  if(!speechMode)return;
+  const recognition=new(window.SpeechRecognition||window.webkitSpeechRecognition)();
+  recognition.lang=localStorage.getItem("language")||"en-US";
+  recognition.interimResults=false;recognition.continuous=false;
+  micBtn.disabled=true;
+  recognition.onresult=event=>{const spoken=event.results[0][0].transcript;sendMessage(spoken);};
+  recognition.onend=()=>{micBtn.disabled=false;}
+  recognition.start();
+}
+
+// Send message
 async function sendMessage(msg=null){
   const input=document.getElementById("userInput");
   const text=msg||input.value.trim();
   if(!text) return;
   addMessage(text,"user");
   input.value="";
-  // Placeholder bot response
-  setTimeout(()=>addMessage(`Echo: ${text}`,"bot"),500);
+  // Placeholder AI response
+  setTimeout(()=>{addMessage(`Echo: ${text}`,"bot"); speakBotText(`Echo: ${text}`);},500);
+}
+
+// Text-to-speech
+function speakBotText(text){
+  const settings={output:true,speed:1};
+  if(!settings.output)return;
+  const utter=new SpeechSynthesisUtterance(text);
+  utter.lang=localStorage.getItem("language")||"en-US";
+  utter.rate=settings.speed;
+  speechSynthesis.speak(utter);
 }
 </script>
+
 </body>
 </html>
